# llm-gpu-lab

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/eval/: smoke_eval.yaml
configs/export/: gguf_q4_k_m.yaml
configs/pretrain/: tiny_100m_4080.yaml  tiny_10m_smoke.yaml  tiny_30m_4080.yaml
configs/sft/: qwen2_5_0_5b_lora_smoke.yaml  qwen3_0_6b_qlora_4080.yaml  smollm2_135m_lora_fallback.yaml
docs/: architecture.html  design.md  ip_safety.md  licenses.md  quickstart.md  results.md  roadmap.md  troubleshooting.md
examples/prompts/: eval_prompts.jsonl  generation_prompts.txt
results/rtx4080/: benchmark_summary.json  environment.json  eval_results.json  generation_samples.json  gguf_export.json  limitations.md  pretrain_metrics.json  pretrain_metrics.jsonl  report.html  run_manifest.md  sft_limitations.md  sft_metrics.json  sft_samples_before_after.json
scripts/: audit_placeholders.sh  collect_system_info.sh  run_eval_smoke.sh  run_full_smoke.sh  run_pretrain_smoke.sh  run_report.sh  run_sft_smoke.sh  setup_env.sh  setup_llamacpp.sh
src/llm_gpu_lab/: __init__.py  __main__.py  cli.py  config.py  env.py  generate.py  logging_utils.py  paths.py  telemetry.py
src/llm_gpu_lab/bench/: __init__.py  gpu_bench.py
src/llm_gpu_lab/data/: __init__.py  packing.py  synthetic_instruct.py  tiny_corpus.py  tinystories.py
src/llm_gpu_lab/eval/: __init__.py  basic_eval.py  lm_eval_bridge.py
src/llm_gpu_lab/export/: __init__.py  gguf.py  merge_lora.py
src/llm_gpu_lab/models/: __init__.py  tiny_gpt.py
src/llm_gpu_lab/report/: __init__.py  html.py
src/llm_gpu_lab/report/templates/: report.html.j2
src/llm_gpu_lab/serve/: __init__.py  llamacpp.py
src/llm_gpu_lab/tokenization/: __init__.py  train_bpe.py
src/llm_gpu_lab/train/: __init__.py  pretrain.py  sft_lora.py
tests/: conftest.py  test_config.py  test_eval.py  test_report.py  test_synthetic_data.py  test_tiny_gpt.py  test_tokenizer.py
